--- a/6-budgety/style copy.css
+++ b/6-budgety/style copy.css
@@ -32,19 +32,17 @@ body {
 **********************************************/
 
 .top {
+    height: 40vh;
     background-color: #ffd000;
     /* background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(back.png);
     background-size: cover; */
     background-position: center;
     position: relative;
-    float: left;
-    width: 30%;
-    height: 100%;
 }
 
 .budget {
-    position: relative;
-    width: 80%;
+    position: absolute;
+    width: 350px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -68,13 +66,13 @@ body {
 
 .budget__income,
 .budget__expenses {
-    padding: 24px 16px;
+    padding: 12px;
     text-transform: uppercase;
 }
 
 .budget__income {
     margin-bottom: 10px;
-    background-color: #24a876;
+    background-color: #28B9B5;
 }
 
 .budget__expenses {
@@ -85,7 +83,7 @@ body {
 .budget__expenses--text {
     float: left;
     font-size: 13px;
-    color: #fff;
+    color: #444;
     margin-top: 2px;
 }
 
@@ -120,7 +118,6 @@ body {
     padding: 14px;
     border-bottom: 1px solid #e7e7e7;
     background-color: #f7f7f7;
-    /* float: right; */
 }
 
 .add__container {
@@ -181,21 +178,19 @@ body {
 
 /***** LISTS *****/
 .container {
-    width: 100%;
+    width: 1000px;
     margin: 60px auto;
 }
 
 .income {
     float: left;
-    width: 30%;
-    margin-right: 40px;
-    margin-left: 20px;
+    width: 475px;
+    margin-right: 50px;
 }
 
 .expenses {
     float: left;
-    width: 30%;
-    margin-right: 20px;
+    width: 475px;
 }
 
 h2 {
